...

    func setProgressHidden(_ isHidden: Bool) {
        progressView.isHidden = isHidden
    }
    
    func setAccessibility() {
        webView.accessibilityIdentifier = "UnsplashWebView"
    }

    private func observeProgress() {
        progressObservation = webView.observe(
            \.estimatedProgress,
            options: [.new]
...
